<?xml version="1.0"?>
<package>
  <name>psl</name>
  <version>1.0.0</version>
  <description>The psl package</description>

  <maintainer email="al.kern@tu-bs.de">Alexander Kern</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
 <export>
   <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lpsl"/>
 </export>

</package>
