<package format="2">
    <name>psl</name>
    <version>1.0.0</version>
    <description>The psl package</description>

    <author>Christian Haene</author>
    <maintainer email="al.kern@tu-bs.de">Alexander Kern</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>CUDA</build_depend>
    <build_depend>OpenCV</build_depend>
    <build_depend>Boost</build_depend>
    <build_depend>Eigen3</build_depend>
    <build_depend>cmake_modules</build_depend>

    <exec_depend>CUDA</exec_depend>
    <exec_depend>OpenCV</exec_depend>
    <exec_depend>Boost</exec_depend>
    <exec_depend>Eigen3</exec_depend>
    <exec_depend>cmake_modules</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lpsl"/>
    </export>

</package>
