<?xml version="1.0"?>
<package>
  <name>orb_slam_2</name>
  <version>1.0.0</version>
  <description>The orb_slam_2 package</description>

  <maintainer email="al.kern@tu-bs.de">laxnpander</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lorb_slam_2"/>
  </export>
</package>
