<package format="2">
  <name>orb_slam_2</name>
  <version>1.0.0</version>
  <description>The orb_slam_2 package</description>

  <author>Raúl Mur-Artal</author>
  <maintainer email="al.kern@tu-bs.de">laxnpander</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <exec_depend>cmake_modules</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lorb_slam_2"/>
  </export>
</package>
